[package]
name = "rumi"
version = "0.2.0"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sstadick/rumi"
description = "PCR Deduplication via directional adjacency"
documentation = "https://docs.rs/rumi"
categories = ["algorithms", "science"]
keywords = ["bioinformatics", "umi", "dedup", "genomics"]

[lib]
name = "rumi_lib"
path = "src/lib.rs"

[[bin]]
name = "rumi"
path = "src/main.rs"

[dependencies]
clap = "2.33"
rust-htslib = "0.26"
rayon = "1.1"
basebits = "1.2.0"
